--- a/kmkscores/package.json
+++ b/kmkscores/package.json
@@ -40,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/body-scroll-lock": "^3.1.0"
   }
 }
